crates/compiler/src/tests/e2e/bad/0063_match_arm_parse_error/main.gom
enum List {
    Nil,
    Cons(int32, Box[List]),
}

fn sum(list: List) -> int32 {
    match list {
        List::Nil => 0,
        List::Cons(head, tail) => head + sum(*tail),
    }
}

fn main() {
    let list = List::Cons(1, box List::Cons(2, box List::Cons(3, box List::Nil)));
    println(sum(list).to_string());
}
